--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@headlessui/react": "^2.2.0",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
